--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -17,10 +17,14 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "gatsby": "^2.24.79",
+    "gatsby-image": "^2.4.21",
     "gatsby-plugin-styled-components": "^3.3.14",
     "gatsby-source-sanity": "^6.0.4",
+    "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-slick": "^0.27.12",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
