--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -18,13 +18,15 @@
 		"prebuild": "netlify-lambda install"
 	},
 	"dependencies": {
+		"@sanity/block-content-to-react": "^2.0.7",
+		"babel-plugin-styled-components": "^1.12.0",
 		"cross-env": "^7.0.2",
 		"dotenv": "^8.2.0",
-		"gatsby": "^2.24.79",
+		"gatsby": "^2.31.0",
 		"gatsby-image": "^2.4.21",
 		"gatsby-plugin-react-helmet": "^3.6.0",
 		"gatsby-plugin-styled-components": "^3.3.14",
-		"gatsby-source-sanity": "^6.0.4",
+		"gatsby-source-sanity": "^6.0.5",
 		"netlify-cli": "^2.69.4",
 		"netlify-lambda": "^2.0.1",
 		"normalize.css": "^8.0.1",
