--- a/sanity/package.json
+++ b/sanity/package.json
@@ -8,7 +8,9 @@
 	"license": "UNLICENSED",
 	"scripts": {
 		"dev": "sanity start",
-		"test": "sanity check"
+		"test": "sanity check",
+		"build": "sanity build",
+		"graphql-deploy": "sanity graphql deploy production"
 	},
 	"keywords": [
 		"sanity"
@@ -17,14 +19,17 @@
 		"@sanity/base": "^2.0.7",
 		"@sanity/components": "^2.0.7",
 		"@sanity/core": "^2.0.5",
+		"@sanity/dashboard": "^2.1.4",
 		"@sanity/default-layout": "^2.0.7",
 		"@sanity/default-login": "^2.0.5",
 		"@sanity/desk-tool": "^2.0.8",
 		"@sanity/vision": "^2.0.5",
+		"dotenv": "^8.2.0",
 		"prop-types": "^15.6",
 		"react": "^16.2",
 		"react-dom": "^16.2",
-		"react-icons": "^4.1.0"
+		"react-icons": "^4.1.0",
+		"sanity-plugin-dashboard-widget-netlify": "^1.0.1"
 	},
 	"devDependencies": {}
 }
